--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <script src="/scripts/script.js"></script>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
